<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>signal_operations</name>
  <version>0.0.0</version>
  <description>Package to operate signals</description>
  <maintainer email="filip.michalski.1@student.put.poznan.pl">filip</maintainer>
  <license>Apache-2.0</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ad_ws_interfaces</exec_depend>
  <exec_depend>geometry_msg</exec_depend>
  <exec_depend>control_interfaces</exec_depend>
  <exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
